Updating .gitignore File

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ single port ram/vsim.wlf
 .gitignore.bak
 README.md.bak
 single port ram/waves.do.bak
-python work/.settings
-python work/__pycache__
-python work/.project
-python work/.pydevproject
+python work/SVA-ATCG/.settings
+python work/SVA-ATCG/__pycache__
+python work/SVA-ATCG/.project
+python work/SVA-ATCG/.pydevproject
